Corrected styling (size and spacing) for evolution images

--- a/css/layout.css
+++ b/css/layout.css
@@ -11,6 +11,13 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .stats-line {
